[gd_scene load_steps=10 format=3 uid="uid://cl4ox2uwc81c0"]

[ext_resource type="Script" uid="uid://3mwuv6hnt2yq" path="res://scenes/characters/enemies/mambu/mambu.gd" id="1_ogkec"]
[ext_resource type="Texture2D" uid="uid://cdosvjxd2kgdk" path="res://assets/characters/enemies/mambu/mambu-2.png" id="2_owra2"]
[ext_resource type="Texture2D" uid="uid://ng4o3diw33o2" path="res://assets/characters/enemies/mambu/mambu-1.png" id="3_5rye3"]
[ext_resource type="AudioStream" uid="uid://bf8s60vdd86oo" path="res://assets/sound/effects/10 - EnemyShoot.wav" id="4_kdqvf"]
[ext_resource type="AudioStream" uid="uid://dcumo2ryu1elm" path="res://assets/sound/effects/11 - Dink.wav" id="4_rmuoj"]
[ext_resource type="Script" uid="uid://ck6kbh3rmlsr8" path="res://scripts/enemy_hurtbox.gd" id="5_uyt00"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gosny"]
size = Vector2(18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_gf4ra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_owra2")
}],
"loop": true,
"name": &"shield",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5rye3")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmc1m"]

[node name="Mambu" type="CharacterBody2D" groups=["Enemies"]]
texture_filter = 1
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 16
script = ExtResource("1_ogkec")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_gosny")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -0.5)
sprite_frames = SubResource("SpriteFrames_gf4ra")
animation = &"shield"

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="FireDelay" type="Timer" parent="."]

[node name="ShieldSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rmuoj")

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kdqvf")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2)

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2(0, 2)
script = ExtResource("5_uyt00")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jmc1m")

[connection signal="timeout" from="ShieldTimer" to="." method="_on_shield_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="hurt" from="Area2D" to="." method="_on_area_2d_hurt"]
